cluster/tectonic/provisioning/tectonic/tectonic/monitoring/tectonic-monitoring-auth-prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tectonic-monitoring-auth-prometheus
  namespace: tectonic-system
  labels:
    k8s-app: tectonic-monitoring-auth-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: tectonic-monitoring-auth-prometheus
  template:
    metadata:
      labels:
        k8s-app: tectonic-monitoring-auth-prometheus
    spec:
      containers:
      - name: auth-proxy
        image: quay.io/coreos/tectonic-monitoring-auth:v0.0.1
        args:
        - '-provider=oidc'
        - '-client-id=$(CLIENT_ID)'
        - '-client-secret=$(CLIENT_SECRET)'
        - '-cookie-secret=$(COOKIE_SECRET)'
        - '-external-url=https://console.tectonicsandbox.com/prometheus'
        - '-proxy-prefix=/auth'
        - '-pass-host-header=true'
        - '-pass-user-headers=true'
        - '-pass-basic-auth=false'
        - '-cookie-name=_tectonic_monitoring_auth'
        - '-cookie-domain=console.tectonicsandbox.com'
        - '-cookie-expire=8h0m0s'
        - '-email-domain=*'
        - '-redirect-url=https://console.tectonicsandbox.com/prometheus/auth/callback'
        - '-oidc-issuer-url=$(OIDC_ISSUER_URL)'
        - '-http-address=http://0.0.0.0:4180'
        - '-upstream=http://prometheus.tectonic-system.svc:9090'
        - '-ssl-insecure-skip-verify'
        ports:
        - name: http
          containerPort: 4180
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 5m
            memory: 10Mi
          limits:
            cpu: 10m
            memory: 20Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
